--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/*.ts": {
-      "runtime": "vercel-node@canary"
+      "runtime": "@vercel/node@1.15.0"
     }
   },
   "routes": [
